--- a/viewer/custom/nap-resource/nap-resource.html
+++ b/viewer/custom/nap-resource/nap-resource.html
@@ -11,10 +11,10 @@
   	{{resource.Doc}}
     
   	<core-collapse id="collapse">
-      <nap-method resource="{{resource.Get}}" method="GET"></nap-method>
-      <nap-method resource="{{resource.Post}}" method="POST"></nap-method>
-      <nap-method resource="{{resource.Put}}" method="PUT"></nap-method>
-      <nap-method resource="{{resource.Delete}}" method="DELETE"></nap-method>
+      <nap-method resource="{{resource.Methods.Get}}" method="GET"></nap-method>
+      <nap-method resource="{{resource.Methods.Post}}" method="POST"></nap-method>
+      <nap-method resource="{{resource.Methods.Put}}" method="PUT"></nap-method>
+      <nap-method resource="{{resource.Methods.Delete}}" method="DELETE"></nap-method>
     </core-collapse>
   </template>
   <script>
